Add backend portability prototypes